--- a/ui/main.ui
+++ b/ui/main.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>OK</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
